Fix wrong margin for menu items
Broken in 0cfeb1f (Maintenance: Load minimum possible css / reorg css)

--- a/less/common/mainmenu.less
+++ b/less/common/mainmenu.less
@@ -43,7 +43,6 @@
 				background-repeat: no-repeat;
 				.background-size(24px, 24px);
 				background-position: 10px 50%;
-				margin-left: 10px;
 				border-bottom: 1px solid #3e3e3e;
 				&:hover {
 					text-decoration: none;
