--- a/stylesheets/common/ui.css
+++ b/stylesheets/common/ui.css
@@ -168,7 +168,6 @@ input[type=submit].cancel {
   -webkit-background-size: 24px 24px;
   background-size: 24px 24px;
   background-position: 10px 50%;
-  margin-left: 10px;
   border-bottom: 1px solid #3e3e3e;
 }
 #mw-mf-page-left #mw-mf-menu-main li a:hover {
